[gd_scene load_steps=4 format=3 uid="uid://ew0clqkufdnm"]

[ext_resource type="Script" path="res://ui/settings.gd" id="1_urtni"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0buxk"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phcwa"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Settings" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(280, 256)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0buxk")
script = ExtResource("1_urtni")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_top = 15.0
offset_right = 58.5
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -7.5
offset_right = -10.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ColorLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Left Paddle Color: "

[node name="PaddleColor" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "WHITE"
popup/item_0/id = 0
popup/item_1/text = "RED"
popup/item_1/id = 1
popup/item_2/text = "GREEN"
popup/item_2/id = 2
popup/item_3/text = "BLUE"
popup/item_3/id = 3
popup/item_4/text = "ORANGE"
popup/item_4/id = 4
popup/item_5/text = "YELLOW"
popup/item_5/id = 5
popup/item_6/text = "PURPLE"
popup/item_6/id = 6

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(56, 32)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -36.0
offset_right = 4.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_phcwa")
text = "CLOSE"

[connection signal="item_selected" from="HBoxContainer/PaddleColor" to="." method="_on_paddle_color_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
